--- a/hidraulica.html
+++ b/hidraulica.html
@@ -3,22 +3,25 @@
 <head>
     <title>ENERGYRW</title>
     <link rel="stylesheet" type="text/css" href="/css/estilo.css">
-    <link rel="icon"  href="css/img/icono.jpg">   
+    <link rel="icon"  href="css/img/icono.jpg">
+    
+
+    
 </head>
 <body>
     <div class="sidebar">
         <ul>   
             <li class="links">
-                <a href="solar.html" class="e">Energía solar</a>
-                <a href="solar.html" class="i">Ir</a>
+                <a href="index.html" class="e">Inicio</a>
+                <a href="index.html" class="i">Ir</a>
             </li>
             <li class="links">
                 <a href="eolica.html" class="e">Energía eolica</a>
                 <a href="eolica.html" class="i">Ir</a>
             </li class="links">
             <li class="links">
-                <a href="hidraulica.html" class="e">Energía hidraulica</a>
-                <a href="hidraulica.html" class="i">Ir</a>
+                <a href="solar.html" class="e">Energía solar</a>
+                <a href="solar.html" class="i">Ir</a>
             </li>
             <li class="links">
                 <a href="cinetica.html" class="e">Energía cinetica</a>
@@ -27,7 +30,7 @@
             <li class="links">
                 <a href="electromagnetica.html" class="e">Energía electromagnética</a>
                 <a href="electromagnetica.html" class="i">Ir</a>
-            </li>        
+            </li>       
         </ul>
     </div>
     <section class="todo">
@@ -37,30 +40,30 @@
                     <li class="principal">Menu
                         <div class="oculto" id="mostrar">
                             <ul>   
-                                <li class="superior"><a href="solar.html">Energía solar</a></li>
+                                <li id="superior"><a href="index.html">Inicio</a></li>
                                 <li><a href="eolica.html">Energía eolica</a></li>
-                                <li><a href="hidraulica.html">Energía hidráulica</a></li>
+                                <li><a href="solar.html">Energía solar</a></li>
                                 <li><a href="cinetica.html">Energía cinetica</a></li>
-                                <li class="inferior"><a href="electromagnetica.html">Energía electromagnética</a></li>       
+                                <li id="inferior"><a href="electromagnetica.html">Energía electromagnética</a></li>       
                             </ul>
                         </div>
                     </li>
                 </ul>
             </div>
             <img class="logo" src="css/img/breikis.png" width="140" height="100" >
-        </header>
+        </header> 
         <main class="fit">
             <section class="renovables" >
-                <h1>Energías renovables</h1>
+                <h1> Energía hidráulica</h1>
                 <section class="contenedor1">
-                    <img src="css/img/p.jpg" alt="">
-                    <p>Son aquellas fuentes de energía basadas en la utilización de recursos naturales inagotables: el sol, el viento, el agua o la biomasa vegetal o animal. Se caracterizan por no utilizar combustibles fósiles, sino recursos naturales capaces de renovarse ilimitadamente.</p>                        
+                    <img src="css/img/Energía-hidráulica.jpg" alt="">
+                    <p>La energía hidráulica es un tipo de energía que aprovecha el movimiento del agua. A veces también llamada energía hídrica, permite obtener la electricidad gracias al aprovechamiento de la energía cinética y potencial de las corrientes o saltos de agua.</p>                        
                 </section>
             </section>
         </main>
         <footer>
             <div class="container">
-                <p>&copy; 2023 Especialidad en sistemas. Proyecto:ENERGYRW,   Todos los derechos reservados.</p>
+            <p>&copy; 2023 Especialidad en sistemas. Proyecto:ENERGYRW,   Todos los derechos reservados.</p>
             </div>
         </footer>
     </section>
